manifests/dev_manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev
  template:
    metadata:
      labels:
        app: dev
    spec:
      containers:
        - name: dev
          image: wil42/playground:v2
          ports:
            - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: dev
  namespace: dev
spec:
  selector:
    app: dev
  ports:
    - port: 8888
      targetPort: 8888
  type: ClusterIP
